# ABorganizer

./: .gitignore  Cargo.toml  LICENSE  MYREVIEW.md  README.md  REVIEW.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.sqlx/: query-02a401a36c5e948e5c25eeae38eb04c065b2fe9c1d1ca432cb597753dcdfb9fe.json  query-02fa903b94f7abb7626efd749c6b107dd150b438765a86e19174d18d0761c128.json  query-031034ed35b8dcc1700c898923326d4bd4eac1f72e28eae19495506ba6dc9073.json  query-03196eebd27064babb3744aa331d7a827a959a91ff840708ec416cbd690f6488.json  query-0325a79f473d1964641a9f4fdeb267c417e5ab22e5d28caee7ebe9e8b38a9255.json  query-0393da4af28e1d18e528129d238759af0506b0a6f12368d43a178979209a6db0.json  query-03eb30112c6e3bdb1b79a24fb8eae7b566d2e263cb1099a28e1d529f9552bfd9.json  query-0429b899c866f2d3eefa9ef7ee91a4bcc6f805b9e2cb6a4873256545e87cb968.json  query-0433e11bad78a36a9353e049d14a3203aa98b011bf1726f48028b2082def5589.json  query-055e63c6c46c4019095375b99c164b462621cff270f87a73350aaba1f39228bd.json  query-05dcf834a9c1d7378b6ffacab32dcf17be667068e8f8be2726af3425522d1ea4.json  query-0614775dc900a52eb3be13a001746956f56f2ebf5a60479586742e983e1d85b1.json  query-06188b24af09199084308210de5e6bbd6e362501b55a919898b8a20dea655b45.json  query-06a039b336196b195821506639a55fb5ea0aa08201c83fff70a09d339eb4ac56.json  query-06efe23e617942aeade1a9a001cae7311eee6e28ec8af8cd02a0f6d7165524ed.json  query-06fbd85db8ce91a60fb457625526076c9f5a6d7d2c05f4f5055526a3e4f9d890.json  query-070e7218bd6bc1e40b900cc3f86cde265d481c24de8c716f16bf3172e5589354.json  query-07bc83e86333a18e679e3408b3855783f487f752e6c4144279d0ac6f9051c26f.json  query-08538d57db2d225f26284e52e423e21988d2abd63640843938e9b7b58e21624e.json  query-0952bcd540dd802168ee42a000177239d79b1db36519fbc76aa08d911098e9df.json  query-096e1864f4377b080d3e76663b576de48d60da06364762775aa3c57fcd53da33.json  (+490 more)
bins/aborg/: Cargo.toml
bins/aborg-daemon/: Cargo.toml
bins/aborg-daemon/src/: disk_usage.rs  lockfile.rs  logging.rs  main.rs
bins/aborg-tools/: Cargo.toml
bins/aborg-tools/src/: lib.rs
bins/aborg-tools/src/audit/: clips.rs  match_seed.rs  mod.rs  report.rs  seed.rs  walk.rs  waveform.rs
bins/aborg/src/: main.rs
crates/aax-decrypt/: Cargo.toml
crates/aax-decrypt/src/: lib.rs  stage.rs
crates/api/: Cargo.toml
crates/api/src/: asin_learnings.rs  audiologo_apply.rs  audiologo_review.rs  auth.rs  authors.rs  background.rs  books_chapters_subtitles.rs  books_playlist.rs  books_transcript.rs  cleanup_targets.rs  collections.rs  doctor.rs  edits.rs  entity_books.rs  error.rs  journal_capture.rs  journal_replayers.rs  lib.rs  library_roots.rs  names.rs  narrators.rs  operation_journal.rs  pagination.rs  pairing.rs  progress.rs  publishers.rs  rate_limit.rs  reports.rs  router.rs  saved_queries.rs  search.rs  series.rs  state.rs  stats.rs  tokens.rs  user_edits.rs
crates/api/tests/: asin_auto_learn.rs  audiologo_apply.rs  books_soft_delete.rs  journal_capture_books_patch.rs  journal_capture_status.rs  operation_journal_retry.rs  router_smoke.rs
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs
crates/audio/: Cargo.toml  build.rs
crates/audio/src/: aax.rs  ffi.rs  info.rs  lib.rs
crates/audiologo/: Cargo.toml
crates/audiologo/src/: apply.rs  lib.rs  phrases.rs  stage.rs  transcript_aided.rs
crates/background/: Cargo.toml
crates/background/src/: lib.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: asin_learnings.rs  audible.rs  audible_search.rs  audnexus.rs  canonical_author.rs  chapter_info.rs  chapter_winner.rs  chapters.rs  consensus.rs  cue_chapters.rs  embedded_chapters.rs  enrich.rs  epub_chapters.rs  epub_title_fallback.rs  franchise.rs  identity.rs  lib.rs  mp3_chap.rs  release_state.rs  series_gaps.rs  tiers.rs
crates/catalog/tests/: promote_drift.rs  series_resolve.rs
crates/companion/: Cargo.toml
crates/companion-extract/: Cargo.toml
crates/companion-extract/src/: epub_toc.rs  epub_walk.rs  lib.rs
crates/companion/src/: detect.rs  lib.rs  pair.rs  scan.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: aax_activation_bytes.rs  auth.rs  cache.rs  cleanup.rs  error.rs  field.rs  genre_code.rs  ids.rs  language_code.rs  lib.rs  paths.rs  reading_status.rs  tags.rs  time_format.rs  trust_zones.rs  tunables.rs
crates/covers/: Cargo.toml
crates/covers/src/: decode.rs  fetch.rs  lib.rs  resize.rs
crates/db/: Cargo.toml
crates/db/migrations/ephemeral/: 001_initial.sql  002_speech_installs.sql  003_jobs_priority_idle.sql  004_pairing_codes_argon2.sql  005_sleep_timer_state.sql  006_background_task_state.sql  007_rename_stages.sql  008_rename_stages_pass_2.sql
crates/db/src/: book_file_refs.rs  companions.rs  ephemeral.rs  lib.rs  library.rs  migrations.rs  tokens.rs
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: lib.rs
crates/fingerprint/: Cargo.toml
crates/fingerprint/src/: lib.rs
crates/foundation-models/: Cargo.toml  build.rs
crates/foundation-models/src/: dna_stage.rs  lib.rs
crates/journal/: Cargo.toml
crates/journal/src/: lib.rs
crates/llm-extractors/: Cargo.toml
crates/llm-extractors/src/: arc_stage.rs  characters_stage.rs  dna_stage.rs  lib.rs  series_summary_stage.rs  setting_stage.rs  summary_stage.rs  transcript_fm_polish_stage.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: cleanup.rs  dag.rs  dispatcher.rs  lib.rs  scheduler.rs  stage.rs
crates/progress/: Cargo.toml
crates/progress/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/saved-queries/: Cargo.toml
crates/saved-queries/src/: lib.rs
crates/scan/: Cargo.toml
crates/scan/src/: companion_scan.rs  lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/seed/: Cargo.toml
crates/seed/src/: lib.rs
crates/shelf/: Cargo.toml
crates/shelf/src/: auth.rs  cover.rs  error.rs  files.rs  integration_tests.rs  items.rs  lib.rs  libraries.rs  state.rs
swift/: aborg_ai.swift  (+3 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/checks/: brand.rs  file_size.rs  macros.rs  mod.rs  names.rs  route_tests.rs  walk.rs
(+73 files in other folders)
