[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/pipeline",
    "crates/fingerprint",
    "crates/audiologo",
    "crates/catalog",
    "crates/speech",
    "crates/transcript",
    "crates/transcript-correct",
    "crates/foundation-models",
    "crates/llm-extractors",
    "crates/audio",
    "crates/transcode",
    "crates/api",
    "crates/shelf",
    "crates/webui-config",
    "crates/webui-player",
    "crates/seed",
    "crates/scan",
    "crates/progress",
    "crates/background",
    "crates/query",
    "crates/dispatcher",
    "crates/saved-queries",
    "crates/stats",
    "crates/journal",
    "crates/archive",
    "crates/companion",
    "crates/companion-extract",
    "crates/covers",
    "crates/search",
    "crates/tag-read",
    "crates/tag-write",
    "bins/aborg",
    "bins/aborg-daemon",
    "bins/aborg-tools",
    "xtask",
]
default-members = ["bins/aborg", "bins/aborg-daemon", "bins/aborg-tools"]

# ── App branding ─────────────────────────────────────────────────────────
# Single source of truth for every user-facing name + identifier. Crates
# read these via `core::build_info` (populated by the workspace build
# script). No string in any source file may hardcode "ABorganizer",
# "aborg", or the bundle ID prefix — `cargo xtask check` enforces this.
[workspace.metadata.app]
display_name = "ABorganizer"
description  = "AudioBook organizer using Audible/Audnexus and Apple Intelligence"
cli_binary   = "aborg"
daemon_name  = "aborg-daemon"
domain       = "io.github.katertier"
support_url  = "https://github.com/katertier/ABorganizer"
homepage_url = "https://github.com/katertier/ABorganizer"

# ── Workspace-wide package defaults ──────────────────────────────────────
[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT"
authors      = ["katertier"]
repository   = "https://github.com/katertier/ABorganizer"
homepage     = "https://github.com/katertier/ABorganizer"

# ── Shared dependency versions ───────────────────────────────────────────
# All crates inherit via `dep = { workspace = true }`. Update version
# here once, applies everywhere. Sorted alphabetically.
[workspace.dependencies]
anyhow         = "1.0"
# argon2id PHF for low-entropy secrets (pairing codes, future
# user passwords). Defaults to the `password-hash` PHC-string
# format which embeds salt + params in the encoded output —
# we don't store params separately.
argon2         = { version = "0.5", features = ["std"] }
askama         = "0.12"
async-trait    = "0.1"
axum           = { version = "0.8", features = ["macros", "http2", "ws"] }
axum-server    = { version = "0.8", features = ["tls-rustls"] }
blake3         = "1.8"
bytes          = "1.7"
chrono         = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap           = { version = "4.6", features = ["derive", "env", "string"] }
fd-lock        = "4.0"
figment        = { version = "0.10", features = ["toml", "env"] }
futures        = "0.3"
# Multi-glob set matcher for the scan watch-folder exclusion list
# (B.4, tracker #119). Compiles each pattern once; the `is_match`
# probe is faster than building a `glob::Pattern` per call.
globset        = "0.4"
# Stream adapters over Tokio channels. Used by the
# foundation-models bridge to expose `complete_stream(...)
# -> impl Stream` over an mpsc::UnboundedReceiver fed by the
# Swift FFI streaming callback.
tokio-stream   = "0.1"
hex            = "0.4"
# Pure-Rust image decode + resize. Used by `ab-covers` for the
# pixel-bomb defence (`decode_checked`) + multi-size thumbnail
# resize. Feature set targeted at audiobook cover formats:
#   * png  — Audnexus / Audible CDN responses + embedded MP4 art
#   * jpeg — common embedded ID3 picture + CDN format
#   * webp — newer Audible CDN variants
# Other formats (gif / tiff / bmp / heif) fall through; the
# probe step rejects them with a typed error before decode.
image          = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
# Pure-Rust HTML parsing + CSS-selector query. Used by C.4
# (`ab-companion-extract`) to strip HTML from EPUB spine
# documents before tokenisation. Default features only —
# we don't need the optional `deterministic` knob.
scraper        = "0.27"
# Unicode-aware word segmentation. Used by C.4 to tokenize
# EPUB body text the way humans do (handles non-ASCII
# punctuation, joining hyphens, etc. better than `split_whitespace`).
unicode-segmentation = "1.13"
# Pure-Rust audio tag + property reader. Used by the tag-read stage
# for duration/bitrate/codec probing + ID3/MP4-atom tag extraction.
# Pinned to a current minor; verify API on each minor bump.
lofty          = "0.24"
mp4ameta       = "0.13"
# Pure-Rust audio decoder. Feeds PCM samples to chromaprint for
# whole-book duplicate detection.
#
# Feature set is targeted at the formats we actually care about
# (audiobooks are overwhelmingly mp3 + m4a/m4b in the wild):
#
#   * mp3       — MPEG layer 3
#   * aac       — AAC codec inside MP4 (m4a / m4b)
#   * isomp4    — MP4 container parsing (chapters, atoms)
#   * flac      — FLAC codec + container
#   * ogg       — Ogg container
#   * vorbis    — Vorbis codec (the .ogg case)
#
# Formats with no decoder in symphonia 0.5 (notably `.opus`, `.aax`,
# `.wma`) fall through the decode path, get logged, and are skipped
# by the fingerprint stage. Other pipeline stages (tag-read,
# audiologo via separate codepath) aren't affected.
symphonia      = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "ogg", "vorbis"] }
# Pure-Rust AcoustID-compatible chromaprint. Whole-book identity
# fingerprinting (not the audiologo RMS thumbprint, which is its
# own crate).
rusty-chromaprint = "0.3"
mime           = "0.3"
mime_guess     = "2.0"
nix            = { version = "0.29", features = ["signal", "fs"] }
once_cell      = "1.20"
rand           = "0.8"
regex          = "1.10"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
ring           = "0.17"
# (rusqlite removed: workspace standardised on sqlx for SQLite access.
# See `docs/POLICIES.md` "One SQL crate per workspace" + ADR-0004.)
secrecy        = { version = "0.10", features = ["serde"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
sqlx           = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono"] }
# String-similarity primitives (Levenshtein / Jaro-Winkler /
# Damerau). Used by `ab-transcript-correct` (ADR-0043 § C.5)
# for the normalised-Levenshtein per-token score against the
# C.4 name dictionary. MIT-licensed.
strsim         = "0.11"
thiserror      = "2.0"
tokio          = { version = "1.52", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "process", "signal", "sync", "time"] }
tokio-util     = { version = "0.7", features = ["rt"] }
toml           = "0.8"
tower          = { version = "0.5", features = ["util"] }
tower-http     = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs", "set-header"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
url            = "2.5"
uuid           = { version = "1.10", features = ["v4", "v7", "serde"] }
walkdir        = "2.5"
# Pure-Rust ZIP reader/writer for ab-archive's SafeUnzip
# (ADR-0047). Default features disabled to drop bzip2 (custom
# license cargo-deny refuses) + LZMA (rarely used in audiobook
# bundles). Pure deflate-zlib-rs covers 99%+ of real-world
# audiobook ZIPs; exotic compressors get rejected with a
# ZipError surfaced to the operator.
zip            = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
zstd           = "0.13"

# Internal crates (use neutral names inside the workspace; one place if
# we ever publish them).
ab-core        = { path = "crates/core" }
ab-db          = { path = "crates/db" }
ab-pipeline    = { path = "crates/pipeline" }
ab-fingerprint = { path = "crates/fingerprint" }
ab-audiologo   = { path = "crates/audiologo" }
ab-catalog     = { path = "crates/catalog" }
ab-speech      = { path = "crates/speech" }
ab-transcript  = { path = "crates/transcript" }
ab-transcript-correct = { path = "crates/transcript-correct" }
ab-foundation-models = { path = "crates/foundation-models" }
ab-llm-extractors = { path = "crates/llm-extractors" }
ab-audio       = { path = "crates/audio" }
ab-transcode   = { path = "crates/transcode" }
ab-api         = { path = "crates/api" }
ab-shelf       = { path = "crates/shelf" }
ab-webui-config = { path = "crates/webui-config" }
ab-webui-player = { path = "crates/webui-player" }
ab-seed        = { path = "crates/seed" }
ab-scan        = { path = "crates/scan" }
ab-progress    = { path = "crates/progress" }
ab-background  = { path = "crates/background" }
ab-query       = { path = "crates/query" }
ab-dispatcher  = { path = "crates/dispatcher" }
ab-saved-queries = { path = "crates/saved-queries" }
ab-stats       = { path = "crates/stats" }
ab-journal     = { path = "crates/journal" }
ab-archive     = { path = "crates/archive" }
ab-companion   = { path = "crates/companion" }
ab-companion-extract = { path = "crates/companion-extract" }
ab-covers      = { path = "crates/covers" }
ab-search      = { path = "crates/search" }
ab-tag-read    = { path = "crates/tag-read" }
ab-tag-write   = { path = "crates/tag-write" }

# Test-only
proptest       = "1.5"
insta          = { version = "1.40", features = ["yaml"] }
tempfile       = "3.13"

# ── Lint policy (applies to every workspace member) ──────────────────────
# - clippy at `warn` by default; specific lints denied/forbidden below.
# - `unsafe_code` is denied (not forbidden) globally: FFI bridge
#   crates (currently `ab-transcript`, in future `ab-audio`) override
#   per-FFI-site with `#[expect(unsafe_code, reason = "…")]` + a
#   `// SAFETY:` comment. `deny` blocks accidental unsafe in
#   non-FFI code while permitting the deliberate, documented
#   exceptions. `forbid` would reject `#[expect]` outright.
[workspace.lints.rust]
unsafe_code              = "deny"
missing_docs             = "warn"
unreachable_pub          = "warn"
trivial_casts            = "warn"
trivial_numeric_casts    = "warn"
unused_lifetimes         = "warn"
unused_qualifications    = "warn"

[workspace.lints.clippy]
pedantic                 = { level = "warn", priority = -1 }
nursery                  = { level = "warn", priority = -1 }
# Suppress the pedantic lints that fire on every other line for no real win.
module_name_repetitions  = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
must_use_candidate       = "allow"
# Hard prohibitions — break the build.
unwrap_used              = "deny"
expect_used              = "warn"   # `.expect("invariant: …")` ok with the reason in the message
panic                    = "deny"
todo                     = "deny"
unimplemented            = "deny"
dbg_macro                = "deny"
print_stdout             = "deny"
print_stderr             = "deny"
too_many_lines           = { level = "deny", priority = 0 }   # default cap 100 lines/fn
exit                     = "deny"
mem_forget               = "deny"
str_to_string            = "deny"
# Doc lints
doc_markdown             = "warn"

# ── Release profile ──────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
debug         = "line-tables-only"   # keep enough DWARF for backtraces
panic         = "abort"

[profile.dev]
opt-level = 1   # build-time/test-time happy medium

[profile.dev.package."*"]
opt-level = 2   # deps get more optimization to keep dev test runs fast

# Test binaries: compile-fast targets for hot-iteration aspect testing.
[profile.bench]
inherits      = "release"
debug         = "full"
