[package]
name         = "xtask"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
publish      = false
description  = "Custom workspace checks: file-size, naming, banned identifiers, banned macros, hardcoded app-name scan, schema drift, doc coverage."

[lints]
workspace = true

[dependencies]
anyhow  = { workspace = true }
clap    = { workspace = true }
regex   = { workspace = true }
walkdir = { workspace = true }
