[package]
name         = "aborg-tools"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Per-aspect bench binaries for fast iteration. Each binary links only the crates it needs so recompile-after-edit stays under 30s."

[lints]
workspace = true

[[bin]]
name = "fingerprint-bench"
path = "src/bin/fingerprint_bench.rs"

[[bin]]
name = "audiologo-bench"
path = "src/bin/audiologo_bench.rs"

[[bin]]
name = "schema-snapshot"
path = "src/bin/schema_snapshot.rs"

[[bin]]
name = "webui-dev"
path = "src/bin/webui_dev.rs"

[[bin]]
name = "transcribe-probe"
path = "src/bin/transcribe_probe.rs"

[[bin]]
name = "audiologo-audit"
path = "src/bin/audiologo_audit.rs"

[dependencies]
ab-core        = { workspace = true }
ab-db          = { workspace = true }
ab-fingerprint = { workspace = true }
# base64 decode of ABtagger findings JSON fingerprint blobs in the
# audit binary's seed-match path.
base64         = { workspace = true }
ab-audiologo   = { workspace = true }
ab-transcript  = { workspace = true }
ab-speech      = { workspace = true }
ab-webui-config = { workspace = true }
ab-webui-player = { workspace = true }
ab-api         = { workspace = true }
anyhow         = { workspace = true }
clap           = { workspace = true }
axum           = { workspace = true }
# `lofty` for audiobook tag-title + duration extraction in the
# audit binary. Workspace dep already.
lofty          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
# Symphonia decode → PCM samples → SVG waveform render in the
# audit binary.
symphonia      = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
# Recursive corpus directory walk for the audit binary.
walkdir        = { workspace = true }

[dev-dependencies]
# Sandbox dirs for audit::report pagination tests.
tempfile = { workspace = true }
