[package]
name         = "ab-aax-decrypt"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Audible AAX → m4b lossless container swap via ffmpeg shell-out (ADR-0053 Revision 2). Pure-Rust wrapper; ffmpeg is a runtime dep with hard fallback (missing-on-PATH falls through as Skipped)."

[lints]
workspace = true

[dependencies]
ab-core    = { workspace = true }
# Resolve activation bytes from env / config / Keychain.
# (`ab-core` re-exports the type; declared explicitly here to
# make the dep edge obvious at code-review time.)
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
