[package]
name         = "ab-aax-decrypt"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "Audible AAX → m4b lossless container swap via ffmpeg shell-out (ADR-0053 Revision 2). Pure-Rust wrapper; ffmpeg is a runtime dep with hard fallback (missing-on-PATH falls through as Skipped)."

[lints]
workspace = true

[dependencies]
ab-core     = { workspace = true }
ab-db       = { workspace = true }
ab-pipeline = { workspace = true }
async-trait = { workspace = true }
sqlx        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
